--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <!-- work book -->
     <string name="workbook">근무수첩</string>
     <string name="monthly_record">%d월 기록</string>
+    <string name="goal_setting">나의 목표 수입 설정</string>
 </resources>
