--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,5 +117,25 @@
     <string name="goal_setting_dialog_title">매달 목표 수입 설정</string>
     <string name="goal_setting_dialog_description">목표 금액은 최소 10만원부터 입력해주세요.</string>
 
-
+    <!-- daily work detail -->
+    <string name="save">저장</string>
+    <string name="daily_work_type">근무 형태</string>
+    <string name="necessary">필수</string>
+    <string name="memo">메모</string>
+    <string name="add_photo">사진 첨부</string>
+    <string name="select">선택</string>
+    <string name="income_input">금액 입력</string>
+    <string name="total_income">총 수입</string>
+    <string name="auto_calculation">자동계산</string>
+    <string name="expenditure_amount">지출액</string>
+    <string name="saved_amount">저축액</string>
+    <string name="goal_achieved_amount">목표수입 %d 기여</string>
+    <string name="show_my_income">수입 자랑하기✌️</string>
+    <string name="calculating_yet">계산 중이에요</string>
+    <string name="daily_work_date_format">%s %s요일</string>
+    
+    <string name="daily_caddie_rounding">라운딩 수</string>
+    <string name="daily_caddie_caddie_p">캐디피 수입</string>
+    <string name="daily_caddie_over_p">오버피 수입</string>
+    <string name="daily_caddie_soil">배토 여부</string>
 </resources>
