--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,5 +160,11 @@
     <string name="logout">로그아웃</string>
     <string name="withdraw">회원탈퇴</string>
     <string name="star">*</string>
+    
+    <!-- notification -->
+    <string name="noti_title">알림</string>
+    <string name="noti_zero_title">아직 새로운 알림이 없어요</string>
+    <string name="noti_zero_description">푸시 알림에 동의해 주시면\n새로운 소식을 가장 먼저 알려 드릴게요!</string>
+    <string name="noti_move_to_setting">알림 설정하러 가기</string>
 
 </resources>
