--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,11 +70,13 @@
     <!-- terms of service -->
     <string name="tos_title">블루 클럽을 이용하려면,\n정보 동의가 필요해요.</string>
     <string name="tos_entire">약관 전체 동의</string>
-    <string name="tos_privacy">개인정보 수집·이용 정책 동의 (필수)</string>
+    <string name="tos_age">만 14세 이상입니다. (필수)</string>
     <string name="tos_service">서비스 이용약관 동의 (필수)</string>
-    <string name="tos_third">제 3자 제공 동의 (필수)</string>
-    <string name="tos_phone">휴대폰 본인확인 서비스 동의 (필수)</string>
-    <string name="tos_marketing">마케팅 활용정보 동의 (선택)</string>
+    <string name="tos_privacy">개인정보 처리방침 동의 (필수)</string>
+    <string name="tos_marketing">마케팅 수신 동의 (선택)</string>
+    <string name="tos_event">이벤트 앱 푸시 수신 동의 (선택)</string>
+
+    <string name="confirm">확인</string>
 
     <!-- auth setting finished -->
     <string name="auth_finished_title">블루클럽에 오신걸 환영해요!</string>
