--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,4 +172,7 @@
     <string name="noti_zero_description">푸시 알림에 동의해 주시면\n새로운 소식을 가장 먼저 알려 드릴게요!</string>
     <string name="noti_move_to_setting">알림 설정하러 가기</string>
 
+
+    <string name="withdraw_success">회원 탈퇴가 완료되었습니다.</string>
+    <string name="withdraw_fail">회원 탈퇴에 실패하였습니다.</string>
 </resources>
