--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="auto_calculation">자동계산</string>
     <string name="expenditure_amount">지출액</string>
     <string name="saved_amount">저축액</string>
-    <string name="goal_achieved_amount">목표수입 %d%% 기여</string>
+    <string name="goal_achieved_amount">목표수입 N% 기여</string>
     <string name="show_my_income">수입 자랑하기✌️</string>
     <string name="calculating_yet">계산 중이에요</string>
     <string name="daily_work_date_format">%d.%d %s</string>
@@ -197,7 +197,7 @@
     <string name="work_card_close">닫기</string>
     <string name="work_card_title">수입인증 카드로\n근무 성과를 자랑해봐요</string>
     <string name="work_card_job">%s중</string>
-    <string name="work_card_percentage">상위 %d%%</string>
+    <string name="work_card_percentage">상위 %s%%</string>
     <string name="work_card_income_tag">수입</string>
     <string name="work_card_worked_day">총 %d건 수행</string>
     <string name="work_card_certification">수입인증 BLUECLUB</string>
