--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,10 @@
     <string name="banner_title2">근무관리 잘하는 법 배워요</string>
 
     <string name="home_nickname">%s님</string>
-    <string name="banner_info">%d월 %s님의 첫 기록이 기다려져요!</string>
+    <string name="banner_info_no_record">%d월 %s님의 첫 기록이 기다려져요!</string>
+    <string name="banner_info_no_today">%s님 깜빡하신 근무기록은 없으신가요?</string>
+    <string name="banner_info_new">%s님 이번달 시작이 좋아요!</string>
+    <string name="banner_info_normal">%d일 연속 코인 획득중이에요</string>
 
     <!-- work book -->
     <string name="workbook">근무수첩</string>
